server should be able to check write privileges on directory, open a file for writing, and write it in utf-8 encoding (this can change later)